src/test/ui/regions/regions-ref-in-fn-arg.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/regions-ref-in-fn-arg.rs:4:13
   |
LL | fn arg_item(box ref x: Box<isize>) -> &'static isize {
   |             ^^^^^^^^^ creates a temporary which is freed while still in use
LL |     x
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/regions-ref-in-fn-arg.rs:11:11
   |
LL |     with(|box ref x| x)
   |           ^^^^^^^^^  -- borrow later used here
   |           |          |
   |           |          temporary value is freed at the end of this statement
   |           creates a temporary which is freed while still in use
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
